--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "NODE_ENV=development node babelhook.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --compilers js:babel-core/register --require ./__test/test-helper.js '__test/**/*.@(js|jsx)'"
   },
   "author": "Toan Nguyen Gia",
   "license": "ISC",
@@ -13,8 +13,11 @@
     "babel-core": "^5.8.33",
     "babel-loader": "^5.3.3",
     "babel-plugin-typecheck": "^2.0.0",
+    "chai": "^3.4.1",
+    "chai-immutable": "^1.5.2",
     "css-loader": "^0.21.0",
     "flowcheck": "^0.2.7",
+    "mocha": "^2.3.4",
     "myth-loader": "^1.0.1",
     "node-sass": "^3.4.1",
     "react-hot-loader": "^1.3.0",
@@ -26,6 +29,7 @@
   },
   "dependencies": {
     "babel": "^6.0.2",
+    "immutable": "^3.7.5",
     "react": "^0.14.1",
     "react-dom": "^0.14.1",
     "react-redux": "^4.0.0",
