--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   },
   "dependencies": {
     "babel": "^6.0.2",
+    "es6-promise": "^3.0.2",
     "immutable": "^3.7.5",
+    "isomorphic-fetch": "^2.2.0",
     "react": "^0.14.1",
     "react-dom": "^0.14.1",
     "react-redux": "^4.0.0",
