--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
   "dependencies": {
     "babel": "^6.0.2",
     "es6-promise": "^3.0.2",
+    "history": "^1.13.1",
     "immutable": "^3.7.5",
     "isomorphic-fetch": "^2.2.0",
     "react": "^0.14.1",
     "react-dom": "^0.14.1",
     "react-redux": "^4.0.0",
-    "redux": "^3.0.4"
+    "react-router": "^1.0.0",
+    "redux": "^3.0.4",
+    "redux-router": "^1.0.0-beta4"
   }
 }
