--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "myth-loader": "^1.0.1",
     "node-sass": "^3.4.1",
     "react-hot-loader": "^1.3.0",
-    "redux-devtools": "^2.1.5",
+    "redux-devtools": "^3.0.0-beta-3",
+    "redux-devtools-dock-monitor": "^1.0.0-beta-3",
+    "redux-devtools-log-monitor": "^1.0.0-beta-3",
     "sass-loader": "^3.1.1",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.2",
