--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "history": "^1.13.1",
     "immutable": "^3.7.5",
     "isomorphic-fetch": "^2.2.0",
-    "react": "^0.14.1",
+    "react": "^0.14.3",
+    "react-addons-css-transition-group": "^0.14.3",
     "react-dom": "^0.14.1",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.0",
+    "react-static-container": "^1.0.0",
     "redux": "^3.0.4",
     "redux-router": "^1.0.0-beta4"
   }
