--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chai-immutable": "^1.5.2",
     "css-loader": "^0.21.0",
     "flowcheck": "^0.2.7",
+    "jsdom": "^7.1.1",
     "mocha": "^2.3.4",
     "myth-loader": "^1.0.1",
     "node-sass": "^3.4.1",
@@ -25,6 +26,7 @@
     "redux-devtools-dock-monitor": "^1.0.0-beta-3",
     "redux-devtools-log-monitor": "^1.0.0-beta-3",
     "sass-loader": "^3.1.1",
+    "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
@@ -42,6 +44,7 @@
     "react-router": "^1.0.0",
     "react-static-container": "^1.0.0",
     "redux": "^3.0.4",
-    "redux-router": "^1.0.0-beta4"
+    "redux-router": "^1.0.0-beta4",
+    "sinon": "^1.17.2"
   }
 }
