--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "history": "^1.13.1",
     "immutable": "^3.7.5",
     "isomorphic-fetch": "^2.2.0",
+    "loaders.css": "^0.1.1",
     "react": "^0.14.3",
     "react-addons-css-transition-group": "^0.14.3",
     "react-dom": "^0.14.1",
+    "react-loaders": "^2.0.0",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.0",
     "react-static-container": "^1.0.0",
