--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "mocha": "^2.3.4",
     "myth-loader": "^1.0.1",
     "node-sass": "^3.4.1",
+    "react-addons-test-utils": "^0.14.3",
     "react-hot-loader": "^1.3.0",
     "redux-devtools": "^3.0.0-beta-3",
     "redux-devtools-dock-monitor": "^1.0.0-beta-3",
     "redux-devtools-log-monitor": "^1.0.0-beta-3",
+    "rewire": "^2.5.1",
     "sass-loader": "^3.1.1",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.0",
@@ -48,5 +50,8 @@
     "redux": "^3.0.4",
     "redux-router": "^1.0.0-beta4",
     "sinon": "^1.17.2"
+  },
+  "engines": {
+    "node": "4.2.1"
   }
 }
