--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "immutable": "^3.7.5",
     "isomorphic-fetch": "^2.2.0",
     "loaders.css": "^0.1.1",
+    "normalizr": "^1.4.0",
     "react": "^0.14.3",
     "react-addons-css-transition-group": "^0.14.3",
     "react-dom": "^0.14.1",
