--- a/.jscsrc
+++ b/.jscsrc
@@ -1,3 +1,6 @@
 {
-	"preset": "airbnb"
+	"preset": "airbnb",
+	"disallowQuotedKeysInObjects": false,
+	"requireCamelCaseOrUpperCaseIdentifiers": false,
+	"requirePaddingNewLinesAfterBlocks": false
 }
