--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-next-boilerplate",
+  "name": "hasbrain-tracker",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -16,6 +16,7 @@
     "chai": "^3.4.1",
     "chai-immutable": "^1.5.2",
     "css-loader": "^0.21.0",
+    "file-loader": "^0.8.5",
     "flowcheck": "^0.2.7",
     "jsdom": "^7.1.1",
     "mocha": "^2.3.4",
@@ -30,6 +31,7 @@
     "sass-loader": "^3.1.1",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
   },
