--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "loaders.css": "^0.1.1",
     "material-ui": "^0.13.4",
     "normalizr": "^1.4.0",
+    "prismjs": "^1.3.0",
     "react": "^0.14.3",
     "react-addons-css-transition-group": "^0.14.3",
     "react-dom": "^0.14.1",
     "react-loaders": "^2.0.0",
+    "react-pure-render": "^1.0.2",
     "react-redux": "^4.0.0",
     "react-static-container": "^1.0.0",
     "react-tap-event-plugin": "^0.2.1",
