--- a/package.json
+++ b/package.json
@@ -42,10 +42,10 @@
     "immutable": "^3.7.5",
     "isomorphic-fetch": "^2.2.0",
     "loaders.css": "^0.1.1",
-    "material-ui": "^0.13.4",
+    "material-ui": "^0.14.4",
     "normalizr": "^1.4.0",
     "prismjs": "^1.3.0",
-    "react": "^0.14.3",
+    "react": "^0.14.8",
     "react-addons-css-transition-group": "^0.14.3",
     "react-dom": "^0.14.1",
     "react-loaders": "^2.0.0",
@@ -54,6 +54,7 @@
     "react-static-container": "^1.0.0",
     "react-tap-event-plugin": "^0.2.1",
     "redux": "^3.0.4",
+    "redux-thunk": "^2.0.1",
     "sinon": "^1.17.2"
   },
   "engines": {
