--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "history": "^1.13.1",
     "immutable": "^3.7.5",
     "isomorphic-fetch": "^2.2.0",
+    "jsdom": "^9.1.0",
     "loaders.css": "^0.1.1",
     "material-ui": "^0.14.4",
     "normalizr": "^1.4.0",
