--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "react-tap-event-plugin": "^0.2.1",
     "redux": "^3.0.4",
     "redux-thunk": "^2.0.1",
-    "sinon": "^1.17.2"
+    "sinon": "^1.17.2",
+    "tether": "^1.3.3",
+    "tether-shepherd": "^1.8.0"
   },
   "engines": {
     "node": "4.2.1"
