--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "prismjs": "^1.3.0",
     "react": "^0.14.8",
     "react-addons-css-transition-group": "^0.14.3",
+    "react-disqus-thread": "^0.4.0",
     "react-dom": "^0.14.1",
     "react-loaders": "^2.0.0",
     "react-pure-render": "^1.0.2",
@@ -59,7 +60,8 @@
     "redux-thunk": "^2.0.1",
     "sinon": "^1.17.2",
     "tether": "^1.3.3",
-    "tether-shepherd": "^1.8.0"
+    "tether-shepherd": "^1.8.0",
+    "xml2js": "^0.4.17"
   },
   "engines": {
     "node": "4.2.1"
